<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/gray">
    <include
        layout="@layout/toolbar_layout"/>
    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_marginTop="40dp"
        android:text="@string/loginText"
        android:visibility="gone"/>
    <ImageView
        android:layout_height="150dp"
        android:layout_width="150dp"
        android:src="@drawable/ic_launcher_background"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp">

        <EditText
            android:id="@+id/edtEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/btnLogin"
        android:layout_height="40dp"
        android:layout_width="wrap_content"
        android:text="@string/loginText"
        android:layout_marginTop="30dp"
        android:textColor="#000000"
        android:layout_gravity="center"/>
            <TextView
                android:id="@+id/txtForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="50dp"
                android:text="@string/forgotPassword" />
            <TextView
                android:id="@+id/txtCreateAccount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:layout_marginTop="50dp"
                android:text="@string/createAccountText" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>